log/build_2025-03-16_03-19-12/voice_controlled_robot/stdout_stderr.log
running egg_info
writing ../../build/voice_controlled_robot/voice_controlled_robot.egg-info/PKG-INFO
writing dependency_links to ../../build/voice_controlled_robot/voice_controlled_robot.egg-info/dependency_links.txt
writing entry points to ../../build/voice_controlled_robot/voice_controlled_robot.egg-info/entry_points.txt
writing requirements to ../../build/voice_controlled_robot/voice_controlled_robot.egg-info/requires.txt
writing top-level names to ../../build/voice_controlled_robot/voice_controlled_robot.egg-info/top_level.txt
reading manifest file '../../build/voice_controlled_robot/voice_controlled_robot.egg-info/SOURCES.txt'
writing manifest file '../../build/voice_controlled_robot/voice_controlled_robot.egg-info/SOURCES.txt'
running build
running build_py
copying voice_controlled_robot/Nodes.py -> /home/abd3194/ros2_ws/build/voice_controlled_robot/build/lib/voice_controlled_robot
running install
running install_lib
copying /home/abd3194/ros2_ws/build/voice_controlled_robot/build/lib/voice_controlled_robot/Nodes.py -> /home/abd3194/ros2_ws/install/voice_controlled_robot/lib/python3.10/site-packages/voice_controlled_robot
byte-compiling /home/abd3194/ros2_ws/install/voice_controlled_robot/lib/python3.10/site-packages/voice_controlled_robot/Nodes.py to Nodes.cpython-310.pyc
running install_data
running install_egg_info
  File "/home/abd3194/ros2_ws/install/voice_controlled_robot/lib/python3.10/site-packages/voice_controlled_robot/Nodes.py", line 135
    if __name__="__main__":
       ^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Maybe you meant '==' or ':=' instead of '='?

removing '/home/abd3194/ros2_ws/install/voice_controlled_robot/lib/python3.10/site-packages/voice_controlled_robot-0.0.0-py3.10.egg-info' (and everything under it)
Copying ../../build/voice_controlled_robot/voice_controlled_robot.egg-info to /home/abd3194/ros2_ws/install/voice_controlled_robot/lib/python3.10/site-packages/voice_controlled_robot-0.0.0-py3.10.egg-info
running install_scripts
Installing control script to /home/abd3194/ros2_ws/install/voice_controlled_robot/lib/voice_controlled_robot
writing list of installed files to '/home/abd3194/ros2_ws/build/voice_controlled_robot/install.log'
